# multimodal-reference

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  luigi.toml  lvis_categories.json  pyproject.toml  run_separate_model.sh  transcription.py
configs/: base.yaml  example.yaml
configs/cohesion/: example.yaml
configs/detection/: detic.yaml  devit.yaml  glip.yaml
configs/detic/: example.yaml
configs/detic_detection/: example.yaml
configs/glip/: example.yaml
configs/glip_detection/: example.yaml
configs/mdetr/: example.yaml
configs/mot/: base.yaml  bot_sort.yaml  bot_sort_reid.yaml  byte_tracker.yaml  deep_oc_sort.yaml  example.yaml  hybrid_sort.yaml  oc_sort.yaml  strong_sort.yaml
configs/som/: example.yaml
mdetr/: .gitignore  README.md  detection.py  engine.py  evaluate.sh  fine-tune_flickr.sh  hubconf.py  main.py  pretrain.sh  requirements.txt  requirements2.txt  run_with_submitit.py
mdetr/.github/: clevr.md  flickr.md  gqa.md  phrasecut.md  refexp.md
mdetr/configs/: flickr.json  pretrain.json  pretrain_ja.json
mdetr/datasets/: __init__.py  clevr.py  clevrref.py  coco.py  coco_eval.py  flickr.py  flickr_eval.py  gqa.py  lvis_eval.py  lvis_modulation.py  mixed.py  phrasecut.py  refexp.py  transforms.py  vg.py
mdetr/datasets/phrasecut_utils/: subset.py
mdetr/models/: backbone.py  matcher.py  mdetr.py  postprocessors.py  segmentation.py  transformer.py
mdetr/scripts/clevr/CLEVR_1.0_templates/: compare_integer.json  comparison.json  one_hop.json  same_relate.json  single_and.json  single_or.json  three_hop.json  two_hop.json  zero_hop.json
mdetr/scripts/fine-tuning/: gqa_coco_format.py  refexp_coco_format.py  subsample_lvis.py
mdetr/scripts/pre-training/: combine_datasets_train.py  flickr_combined.py  gqa_combined_train.py  gqa_combined_val.py  refexp_combined_train.py  refexp_combined_val.py  vg_preprocessing.py
mdetr/util/: metrics.py  misc.py
pdf_viewer/: app.js  index.html
scripts/: convert_dataset.py  flickr30k_entities_utils.py  gen_recall_distribution.py  gen_relax_table.py  gen_table.py  plot_frame_accuracy.py  plot_size_distribution.py
src/: cohesion_scorer.py  convert_f30k.py  evaluation.py  mdetr.py  mot_strong_sort.py  prediction_writer.py  preprocess.py  transcription.py  utils.py  visualize_bb.py  visualize_mot.py
src/tasks/: __init__.py  cohesion.py  detic.py  detic_detection.py  glip.py  glip_detection.py  mdetr.py  mmref.py  mot.py  util.py
src/tasks/detection/: detic.py  devit.py  glip.py
src/tasks/grounding/: detic.py  glip.py  mdetr.py  vlm_som.py
src/utils/: constants.py  glip.py  image.py  mdetr.py  mot.py  prediction.py  util.py
tests/: conftest.py  test_convert.py  test_evaluate.py
tests/data/: flickr30k_coco.json  sample_ids.txt
tests/data/evaluate/: converted.json  gold.json  gold.knp  images.pptx  info.json  mdetr.json  prediction.json  test-0.json  test-0.knp
tests/data/evaluate/images/: .project.ano  001.png.json  002.png.json  003.png.json
tests/data/flickr30k_annotations/: 100652400.xml  1016887272.xml  1307635496.xml  3706019259.xml  7725133284.xml
