[tool.poetry]
name = "multimodal-reference"
version = "0.1.0"
description = ""
authors = ["nobu-g <ueda-n127@hotmail.co.jp>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tqdm = "^4.64"
rhoknp = "~1.1.0"
dataclasses-json = "^0.5.7"
hydra-core = "^1.3.1"
evaluate = "^0.4.0"
polars = "^0.15.14"

[tool.poetry.group.mdetr.dependencies]
torch = ">=1.7.0,<1.13.0"
torchvision = "*"
matplotlib = "^3.6.2"
scikit-image = "^0.19.3"
transformers = "~4.12.5"
tokenizers = ">=0.10.1,<0.11.0"
portion = "^2.3.0"
timm = "^0.4.12"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
skip-string-normalization = true

[tool.isort]
line_length = 120

[tool.mypy]
python_version = 3.9
